--- a/tmux.ipynb
+++ b/tmux.ipynb
@@ -15,12 +15,39 @@
    "source": [
     "- 终端复用器（terminal multiplexer）\n",
     "- 安装：`sudo apt-get install tmux`\n",
+    "    - `tmux -V`\n",
     "- 进入 tmux 模式：terminal 中输入 tmux 回车\n",
     "  - Ctrl +b：激活控制台\n",
     "    - \"：上下\n",
     "    - %：左右\n",
     "    - o：切换窗口；\n",
     "    - x：关闭当前窗口；"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1460b890-f8e9-4e43-88df-fca941914886",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-28T15:18:03.849819Z",
+     "iopub.status.busy": "2024-08-28T15:18:03.849133Z",
+     "iopub.status.idle": "2024-08-28T15:18:03.985839Z",
+     "shell.execute_reply": "2024-08-28T15:18:03.983739Z",
+     "shell.execute_reply.started": "2024-08-28T15:18:03.849769Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmux 3.2a\n"
+     ]
+    }
+   ],
+   "source": [
+    "!tmux -V"
    ]
   },
   {
