--- a/ubuntu/ubuntu_磁盘管理.ipynb
+++ b/ubuntu/ubuntu_磁盘管理.ipynb
@@ -20,6 +20,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "912c7a4f-01bb-4325-8053-03114271af59",
+   "metadata": {},
+   "source": [
+    "> duf (sudo apt install duf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "98d15cf4",
    "metadata": {},
    "source": [
