--- a/硬件/内存.ipynb
+++ b/硬件/内存.ipynb
@@ -11,6 +11,22 @@
     "        - 原厂一根16gb，然后再买一个 8gb\n",
     "        - 如果原厂是两根8gb，则需要买一根16gb替换其中一根8gb"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "711be624-4c66-4289-93d7-7118c115c82d",
+   "metadata": {},
+   "source": [
+    "### segment fault (core dump)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "043d4dd5-5fec-4b6d-a8b7-feddd535b6c7",
+   "metadata": {},
+   "source": [
+    "\"Segment fault (core dumped)\" 是程序运行时的一个错误，通常发生在程序试图访问未被允许的内存区域时。它是由操作系统通过内存保护机制检测到的，并终止程序执行，同时产生一个内存转储文件（即 core dump），用于调试。"
+   ]
   }
  ],
  "metadata": {
