--- a/硬件/内存.ipynb
+++ b/硬件/内存.ipynb
@@ -5,7 +5,7 @@
    "id": "12b58050-f18f-4555-8862-fb78d739a994",
    "metadata": {},
    "source": [
-    "### 内存带宽，内存位宽"
+    "### 内存带宽（memory bandwidth），内存位宽（memory bus width）"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "source": [
     "- 内存带宽计算公式：\n",
     "    - 内存带宽 = 频率 * 位宽/8\n",
-    "- 内存频率：MT/s 与 Gbps\n",
+    "- 内存频率：MT/s(GT/s) 与 Gbps\n",
     "    - MT/s：Mega Transfers per Second\n",
     "        - MT/s 表示每秒的传输次数。\n",
     "            - 如果每次传输传输 1 位的数据，那么 1 MT/s = 1 Mbps。\n",
@@ -32,13 +32,15 @@
     "    - 显存类型：24 GB GDDR6X。\n",
     "    - 显存位宽：384 位。\n",
     "    - 显存频率：21 Gbps。\n",
+    "- A100：显存位宽达到了 5120位；\n",
+    "    - 显存类型：HBM（high bandwidth memory）\n",
     "- M4 series\n",
     "    - https://en.wikipedia.org/wiki/Apple_M4\n",
     "    - M4：LPDDR5X 7500 MT/s \n",
     "        -  内存位宽：64bit*2 = 128位 (16\\*8)\n",
     "            -  2表示的RAM的双通道；\n",
     "        -  内存带宽计算：\n",
-    "            -  7500*64*2/8/1000 = 120GB/s\n",
+    "            -  7500\\*64\\*2/8/1000 = 120GB/s\n",
     "    - M4 pro/max：LPDDR5X 8533 MT/s\n",
     "        - M4 pro：\n",
     "            - 内存位宽：64bit * 4 = 256bits (16 \\* 16)\n",
@@ -225,6 +227,17 @@
    ],
    "source": [
     "8533 * 128 * 4 / 8 / 1000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df13f15a-b433-46f4-86cf-a3de3ab8ea6d",
+   "metadata": {},
+   "source": [
+    "- 内存带宽似乎也能追上相对高端的GPU芯片；\n",
+    "- 核心数量和整体并行计算能力上与专门的深度学习 GPU（如 NVIDIA A100 或 H100）相比存在差距。\n",
+    "    - cuda、cuda cores\n",
+    "- 专用硬件加速：NVIDIA 和其他高端 GPU 提供 Tensor Cores 等专用单元，加速矩阵运算和深度学习的计算效率。这些特性在 M4 Max 上可能无法完全匹配。"
    ]
   },
   {
