--- a/算力/FLOPs_MACs.ipynb
+++ b/算力/FLOPs_MACs.ipynb
@@ -9,6 +9,8 @@
     "    - FLOPs: Floating point operations，乘法、加法都算；\n",
     "    - MACs: multiply–accumulate operations，一个乘法和加法算一个MAC\n",
     "        - FLOPS = 2MACs\n",
+    "    - Most of modern hardware architectures uses FMA instructions for operations with tensors.\n",
+    "FMA computes $a*x+b$ as one operation. Roughly GMACs = 0.5 * GFLOPs\n",
     "- FLOPs vs. FLOPS\n",
     "    - FLOPs 表示次数，末尾的 s 表示复数；\n",
     "    - FLOPS 表示速度，末尾的 s 表示 per second；\n",
