--- a/ubuntu/ubuntu_磁盘管理.ipynb
+++ b/ubuntu/ubuntu_磁盘管理.ipynb
@@ -45,7 +45,12 @@
     "```\n",
     "\n",
     "- `du -h --max-depth=1 | sort -h`：并按大小排序\n",
-    "    - `sort -hr`：按大小逆序排序"
+    "    - `sort -hr`：按大小逆序排序\n",
+    "- **`du -sh *`**（常用，经典）\n",
+    "    - du：表示 \"disk usage\"（磁盘使用情况），用于查看文件或文件夹的磁盘占用情况。\n",
+    "    - -s：表示 \"summary\"（汇总），仅显示每个指定文件或文件夹的总大小，而不会递归显示每个子文件或子文件夹的大小。\n",
+    "    - -h：表示 \"human-readable\"（人类可读格式），会将大小以合适的单位（如 KB、MB、GB）显示，而不是直接显示以字节为单位的数字。\n",
+    "    - `*`：通配符，表示当前目录下的所有文件和文件夹。* 会将当前目录中的所有内容作为参数传递给 du。"
    ]
   },
   {
