--- a/torch/安装.ipynb
+++ b/torch/安装.ipynb
@@ -24,7 +24,8 @@
      "iopub.status.idle": "2024-11-30T10:43:10.940106Z",
      "shell.execute_reply": "2024-11-30T10:43:10.939194Z",
      "shell.execute_reply.started": "2024-11-30T10:43:10.927282Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -52,6 +53,33 @@
    "source": [
     "import torch\n",
     "print(torch.__config__.show())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7e241c3-a733-4b9d-a4d3-84a9d84632cd",
+   "metadata": {},
+   "source": [
+    "### lib 问题"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94d6a9e4-71da-4cd8-9d75-863849df28c1",
+   "metadata": {},
+   "source": [
+    "- nvjitlink\n",
+    "    - `ImportError: /home/whaow/anaconda3/lib/python3.10/site-packages/torch/lib/../../nvidia/cusparse/lib/libcusparse.so.12: undefined symbol: __nvJitLinkComplete_12_4, version libnvJitLink.so.12`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13b33a88-c57f-47f5-b093-965be63a596f",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "export LD_LIBRARY_PATH=/path/to/venv/lib/python3.10/site-packages/nvidia/nvjitlink/lib:$LD_LIBRARY_PATH\n",
+    "```"
    ]
   }
  ],
