--- a/torch/安装.ipynb
+++ b/torch/安装.ipynb
@@ -10,7 +10,8 @@
     "- 老版本 torch 安装：https://pytorch.org/get-started/previous-versions/，以 torch=1.7.1 为例\n",
     "    - 可以通过 `conda`安装：`conda install pytorch==1.7.1 torchvision==0.8.2 torchaudio==0.7.2 cudatoolkit=11.0 -c pytorch`\n",
     "    - 也可以通过 `pip` 安装：`pip install torch==1.7.1+cu110 torchvision==0.8.2+cu110 torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html`\n",
-    "        - 我本人尝试的 pip 安装的 torch 支持 cuda，而 conda 不支持 cuda？"
+    "        - 我本人尝试的 pip 安装的 torch 支持 cuda，而 conda 不支持 cuda？\n",
+    "- `pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121`"
    ]
   },
   {
