--- a/macos/basics.ipynb
+++ b/macos/basics.ipynb
@@ -21,6 +21,22 @@
     "- `brew doctor`\n",
     "- `brew cleanup`"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "798db804-78d0-40a8-9d79-0fc8a81bcfea",
+   "metadata": {},
+   "source": [
+    "### app"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e50d3320-84a3-4bc5-bb21-04edd63902da",
+   "metadata": {},
+   "source": [
+    "- Network Speed Monitor"
+   ]
   }
  ],
  "metadata": {
