--- a/ubuntu/iterm_zsh.ipynb
+++ b/ubuntu/iterm_zsh.ipynb
@@ -23,7 +23,7 @@
    "id": "126708a3",
    "metadata": {},
    "source": [
-    "## zsh"
+    "## zsh (Oh My Zsh)"
    ]
   },
   {
@@ -89,9 +89,7 @@
     "    - `git clone https://github.com/romkatv/powerlevel10k.git $ZSH_CUSTOM/themes/powerlevel10k`\n",
     "- `git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions`\n",
     "- `git clone https://github.com/agkozak/zsh-z $ZSH_CUSTOM/plugins/zsh-z`\n",
-    "- `git clone git@github.com:zsh-users/zsh-syntax-highlighting.git $ZSH_CUSTOM/plugins/zsh-syntax-highlighting`\n",
-    "\n",
-    "\n",
+    "- `git clone https://github.com/zsh-users/zsh-syntax-highlighting.git $ZSH_CUSTOM/plugins/zsh-syntax-highlighting`\n",
     "\n",
     "```\n",
     "https://github.com/hlissner/zsh-autopair\n",
