--- a/torch/安装.ipynb
+++ b/torch/安装.ipynb
@@ -7,6 +7,9 @@
    "source": [
     "> torch 版本是跟 cudatoolkit 版本绑定的；\n",
     "\n",
+    "- https://pytorch.org/get-started/previous-versions/\n",
+    "    - cuda: 12.4\n",
+    "        - `conda install pytorch==2.5.0 torchvision==0.20.0 torchaudio==2.5.0 pytorch-cuda=12.4 -c pytorch -c nvidia`\n",
     "- 老版本 torch 安装：https://pytorch.org/get-started/previous-versions/，以 torch=1.7.1 为例\n",
     "    - 可以通过 `conda`安装：`conda install pytorch==1.7.1 torchvision==0.8.2 torchaudio==0.7.2 cudatoolkit=11.0 -c pytorch`\n",
     "    - 也可以通过 `pip` 安装：`pip install torch==1.7.1+cu110 torchvision==0.8.2+cu110 torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html`\n",
