--- a/ubuntu/ssh 端口转发与跳板机.ipynb
+++ b/ubuntu/ssh 端口转发与跳板机.ipynb
@@ -180,6 +180,9 @@
     "        - `ssh -L 8000:server3:22 -fN root@server2`\n",
     "            - 8000 为 server1（本机）要开放的端口，\n",
     "            - `server3:22`：要连接到的远程服务器地址和端口；\n",
+    "                - ssh -L 执行前，要先保证 server1 的22端口，处于监听状态\n",
+    "                    - `netstat -an | grep 22`：是 listen 状态；\n",
+    "                    - 否则会报错：`channel 3: open failed: connect failed: Connection refused`\n",
     "            - `-fN`：`-f` 后台运行，`N`：不执行命令，仅端口转发\n",
     "            - `root@server2`：跳板机的用户名和地址\n",
     "        - `netstat -antp | grep 8000`：本机在监听 8000 端口\n",
