--- a/ubuntu/iterm_zsh.ipynb
+++ b/ubuntu/iterm_zsh.ipynb
@@ -85,10 +85,13 @@
    "id": "83636f38",
    "metadata": {},
    "source": [
+    "https://x.com/eleliayub/status/1867619626605064600\n",
+    "\n",
     "- 主题 powerlevel 10k\n",
     "    - `git clone https://github.com/romkatv/powerlevel10k.git $ZSH_CUSTOM/themes/powerlevel10k`\n",
     "- `git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions`\n",
     "- `git clone https://github.com/agkozak/zsh-z $ZSH_CUSTOM/plugins/zsh-z`\n",
+    "    - 允许您快速跳转到您经常或最近访问过的目录——但通常是两者的组合\n",
     "- `git clone https://github.com/zsh-users/zsh-syntax-highlighting.git $ZSH_CUSTOM/plugins/zsh-syntax-highlighting`\n",
     "\n",
     "```\n",
