--- a/ubuntu/wget_curl.ipynb
+++ b/ubuntu/wget_curl.ipynb
@@ -18,7 +18,8 @@
     "    - `-O`: The -O (uppercase \"o\") option tells curl to save the file with its original filename.\n",
     "- 其他参数\n",
     "    - `-s, --silent`\n",
-    "    - `-m, --max-time <seconds>`"
+    "    - `-m, --max-time <seconds>`\n",
+    "    - `-I, --head`："
    ]
   },
   {
@@ -54,7 +55,57 @@
     "    - `-P`：`wget https://karpathy.ai/llama2c/model.bin -P out`\n",
     "        - -P prefix\n",
     "        - `--directory-prefix=prefix`\n",
-    "    - `-O filename`：重命名"
+    "    - `-O filename`：重命名\n",
+    "    - `--content-disposition`: \n",
+    "        - `wget --content-disposition https://arxiv.org/pdf/2408.00657`\n",
+    "        - 自动保存为右键保存时的默认文件名\n",
+    "        - `curl -I https://arxiv.org/pdf/2408.00657`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0187278f-ecd7-444b-9fd4-9d81795e305c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-24T13:44:42.059801Z",
+     "iopub.status.busy": "2024-12-24T13:44:42.059143Z",
+     "iopub.status.idle": "2024-12-24T13:44:42.604028Z",
+     "shell.execute_reply": "2024-12-24T13:44:42.601928Z",
+     "shell.execute_reply.started": "2024-12-24T13:44:42.059752Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTTP/1.1 200 Connection established\n",
+      "\n",
+      "HTTP/2 200 \n",
+      "\u001b[1mcontent-type\u001b[0m: application/pdf\n",
+      "\u001b[1metag\u001b[0m: \"sha256:397ae70de5098b29a41982f7ac8997b221c2d2728e3d8ded1b192913d16e8fb2\"\n",
+      "\u001b[1mlast-modified\u001b[0m: Tue, 06 Aug 2024 01:11:39 GMT\n",
+      "\u001b[1maccess-control-allow-origin\u001b[0m: *\n",
+      "\u001b[1mcontent-disposition\u001b[0m: inline; filename=\"2408.00657v2.pdf\"\n",
+      "\u001b[1mlink\u001b[0m: <https://arxiv.org/pdf/2408.00657>; rel='canonical'\n",
+      "\u001b[1mx-cloud-trace-context\u001b[0m: 8cfa63bafbe5720dc1e56b426365ce66\n",
+      "\u001b[1mserver\u001b[0m: Google Frontend\n",
+      "\u001b[1mvia\u001b[0m: 1.1 google, 1.1 varnish, 1.1 varnish\n",
+      "\u001b[1maccept-ranges\u001b[0m: bytes\n",
+      "\u001b[1mdate\u001b[0m: Tue, 24 Dec 2024 13:44:42 GMT\n",
+      "\u001b[1mage\u001b[0m: 492199\n",
+      "\u001b[1mx-served-by\u001b[0m: cache-lga21958-LGA, cache-nrt-rjtf7700059-NRT\n",
+      "\u001b[1mx-cache\u001b[0m: HIT, HIT\n",
+      "\u001b[1mx-timer\u001b[0m: S1735047882.432173,VS0,VE4\n",
+      "\u001b[1mcontent-length\u001b[0m: 3646500\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# content-disposition: inline; filename=\"2408.00657v2.pdf\"\n",
+    "!curl -I https://arxiv.org/pdf/2408.00657"
    ]
   }
  ],
