--- a/nvidia_cuda/nvidia-smi_显卡信息查看.ipynb
+++ b/nvidia_cuda/nvidia-smi_显卡信息查看.ipynb
@@ -71,6 +71,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "16be4ba9-d24c-412a-8ef1-0cf6a9a2dc52",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-28T10:10:15.273349Z",
+     "iopub.status.busy": "2024-12-28T10:10:15.272711Z",
+     "iopub.status.idle": "2024-12-28T10:10:15.513110Z",
+     "shell.execute_reply": "2024-12-28T10:10:15.510722Z",
+     "shell.execute_reply.started": "2024-12-28T10:10:15.273299Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sat Dec 28 18:10:15 2024       \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 535.183.01             Driver Version: 535.183.01   CUDA Version: 12.2     |\n",
+      "|-----------------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name                 Persistence-M | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                                         |                      |               MIG M. |\n",
+      "|=========================================+======================+======================|\n",
+      "|   0  NVIDIA GeForce RTX 4090        Off | 00000000:18:00.0 Off |                  Off |\n",
+      "| 46%   26C    P8              15W / 450W |     14MiB / 24564MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "|   1  NVIDIA GeForce RTX 4090        Off | 00000000:8A:00.0 Off |                  Off |\n",
+      "| 45%   26C    P8              16W / 450W |     14MiB / 24564MiB |      0%      Default |\n",
+      "|                                         |                      |                  N/A |\n",
+      "+-----------------------------------------+----------------------+----------------------+\n",
+      "                                                                                         \n",
+      "+---------------------------------------------------------------------------------------+\n",
+      "| Processes:                                                                            |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
+      "|        ID   ID                                                             Usage      |\n",
+      "|=======================================================================================|\n",
+      "|    0   N/A  N/A      2060      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+      "|    1   N/A  N/A      2060      G   /usr/lib/xorg/Xorg                            4MiB |\n",
+      "+---------------------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb11ef6f-bfe3-4d58-9c7f-c1608af43870",
+   "metadata": {},
+   "source": [
+    "- Type\n",
+    "    - \"C\" stands for compute.\n",
+    "    - \"G\" stands for graphics.\n",
+    "- Bus-Id Disp.A\n",
+    "    - Bus-Id\n",
+    "        - 00000000:18:00.0: \n",
+    "    - Disp. A（Display Active）：该 gpu 是否在驱动显示器；（on/off）"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3d8fb076-1885-48e1-aa26-ea1e63e26df6",
    "metadata": {},
