--- a/硬件/硬盘.ipynb
+++ b/硬件/硬盘.ipynb
@@ -5,6 +5,10 @@
    "id": "636d0ce3-82b2-4945-80b8-486a4a83cb5b",
    "metadata": {},
    "source": [
+    "- 三大品牌\n",
+    "    - 西部数据（Western digital）\n",
+    "    - 希捷（Seagate）\n",
+    "    - 东芝（Toshiba）\n",
     "- 硬指标\n",
     "    - 硬件缓存：128MB/256MB\n",
     "        - 硬盘缓存对写入小文件有加成；\n",
