--- a/ubuntu/通配符与正则.ipynb
+++ b/ubuntu/通配符与正则.ipynb
@@ -17,7 +17,8 @@
     "    - *：匹配任意数量的字符（包括零个字符）\n",
     "    - ?：匹配单个字符\n",
     "    - []：匹配括号中的任意单个字符\n",
-    "- ls、find"
+    "- `ls`、`find`\n",
+    "- `.gitignore`"
    ]
   },
   {
