--- a/网络/网卡与网络.ipynb
+++ b/网络/网卡与网络.ipynb
@@ -20,7 +20,14 @@
    "id": "21886d37",
    "metadata": {},
    "source": [
-    "- 注意 google.com 与 google.com.hk 是不同的域名"
+    "- 注意 google.com 与 google.com.hk 是不同的域名\n",
+    "- 下载（上传）网速，局域网网速，\n",
+    "    - https://www.bilibili.com/video/BV1xrZmYYEYj/\n",
+    "    - 下载（上传）网速：联通万兆带宽；\n",
+    "        - 上传是下载的1/8?? \n",
+    "    - 网卡\n",
+    "        - 二手400GbE网卡；\n",
+    "        - 地表最快网卡：英伟达（迈络思）；"
    ]
   },
   {
