--- a/ubuntu/装机配置.ipynb
+++ b/ubuntu/装机配置.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "f3220612-155c-4425-9cab-2ede249f98a4",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "- homebrew install\n",
     "- iterm & zsh\n",
