--- a/ubuntu/ubuntu_磁盘管理.ipynb
+++ b/ubuntu/ubuntu_磁盘管理.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "- dstat: \n",
     "    - `sudo apt install dstat`\n",
-    "    - cpu wait"
+    "    - cpu wait\n",
+    "- 实用\n",
+    "    - 排查大文件：`sudo du -h --max-depth=1 / | sort -rh | head -n 15`\n",
+    "        - 然后逐级排查：`sudo du -h --max-depth=1 /root/ | sort -rh | head -n 15`"
    ]
   },
   {
@@ -21,7 +24,13 @@
   {
    "cell_type": "markdown",
    "id": "912c7a4f-01bb-4325-8053-03114271af59",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "> duf (sudo apt install duf)"
    ]
@@ -145,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.0"
   },
   "toc": {
    "base_numbering": 1,
