--- a/ubuntu/vim.ipynb
+++ b/ubuntu/vim.ipynb
@@ -6,7 +6,12 @@
    "metadata": {},
    "source": [
     "- mode\n",
-    "    - normal"
+    "    - normal\n",
+    "- `~/.vimrc`\n",
+    "```\n",
+    "filetype plugin indent on\n",
+    "syntax enable\n",
+    "```"
    ]
   },
   {
@@ -45,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.0"
   },
   "toc": {
    "base_numbering": 1,
