--- a/硬件/硬件与组机.ipynb
+++ b/硬件/硬件与组机.ipynb
@@ -17,6 +17,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff352ff0-223b-4b34-850e-e3e71a54e194",
+   "metadata": {},
+   "source": [
+    "- 安装\n",
+    "    - 工作站（机箱））背后的 hdmi 接口（上边和下边都会有）\n",
+    "        - 上方的 hdmi 接口\n",
+    "            - 这组接口属于电脑主板自带的集成显卡\n",
+    "        - 下方的 hdmi 接口（通常是横向排列的）\n",
+    "            - 属于 NVIDIA 独立显卡；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "344ad3ad",
    "metadata": {},
    "source": [
@@ -142,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.0"
   },
   "toc": {
    "base_numbering": 1,
