--- a/网络/网络问题排查.ipynb
+++ b/网络/网络问题排查.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "df74d07d-5ea9-4040-ae21-d144e948e636",
+   "metadata": {},
+   "source": [
+    "### ping 与 arp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c20c43eb-c088-4e8a-8f0a-638cfad8e363",
    "metadata": {},
    "source": [
@@ -12,6 +20,22 @@
     "        - `sudo arp -d 10.1.120.187`：手动清除该 ip 的 arp 缓存；\n",
     "        - `ping 10.1.120.187`\n",
     "        - 或者关闭 wifi，重新连接，重试 ping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60721351-4964-42c1-9cde-ad836496b9d0",
+   "metadata": {},
+   "source": [
+    "### dns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60496039-78cd-464b-9d7e-cb0369ae43ed",
+   "metadata": {},
+   "source": [
+    "- `/etc/resolv.conf`"
    ]
   }
  ],
