--- a/ubuntu/linux_shell.ipynb
+++ b/ubuntu/linux_shell.ipynb
@@ -136,7 +136,7 @@
    "metadata": {},
    "source": [
     "- 后台运行\n",
-    "\n",
+    "    - 在 Shell 脚本中，`&` 的作用是将命令放到后台执行。\n",
     "```\n",
     "# 日志到 jupyter.log 文件\n",
     "# >> 表示追加（append）\n",
@@ -234,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.0"
   },
   "toc": {
    "base_numbering": 1,
