--- a/nvidia_cuda/深度学习环境安装_pytorch_cudnn.ipynb
+++ b/nvidia_cuda/深度学习环境安装_pytorch_cudnn.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "source": [
     "- 参考\n",
+    "    - https://developer.nvidia.com/cuda-gpus\n",
+    "        - CUDA GPU Compute Capability\n",
     "    - https://blog.csdn.net/anmin8888/article/details/127910084"
    ]
   },
@@ -201,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.0"
   },
   "toc": {
    "base_numbering": 1,
