--- a/硬件/主板.ipynb
+++ b/硬件/主板.ipynb
@@ -6,22 +6,25 @@
    "metadata": {},
    "source": [
     "- `sudo dmidecode -t baseboard`\n",
-    "    - 查看自己的主板型号以及 onboard device"
+    "    - 查看自己的主板型号以及 onboard device\n",
+    "\n",
+    "```\n",
+    "Handle 0x0049, DMI type 2, 15 bytes\n",
+    "Base Board Information\n",
+    "\tManufacturer: H3C\n",
+    "\tProduct Name: BS56M2C20SAMDA\n",
+    "```\n",
+    "\n",
+    "- lspci 看不到 cpu，查看 cpu 需要通过 lscpu\n",
+    "    -  CPU 不是插在 PCI/PCIe 插槽里的“外设”，恰恰相反，CPU 是整个系统的“主人”，而所有的 PCI/PCIe 插槽都是通过主板连接到 CPU 上的“仆人”。\n",
+    "    -  CPU 有自己专门的插槽（CPU socket）"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ea9dfa10-1503-4db2-8d09-97e806a6c138",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-07-16T13:15:27.372450Z",
-     "iopub.status.busy": "2024-07-16T13:15:27.371888Z",
-     "iopub.status.idle": "2024-07-16T13:15:27.382094Z",
-     "shell.execute_reply": "2024-07-16T13:15:27.380348Z",
-     "shell.execute_reply.started": "2024-07-16T13:15:27.372404Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import Image"
@@ -31,20 +34,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "4410c6dc-ec93-421f-8cf1-5dee01c72773",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-07-16T13:19:39.468185Z",
-     "iopub.status.busy": "2024-07-16T13:19:39.467571Z",
-     "iopub.status.idle": "2024-07-16T13:19:39.479862Z",
-     "shell.execute_reply": "2024-07-16T13:19:39.477747Z",
-     "shell.execute_reply.started": "2024-07-16T13:19:39.468139Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<img src=\"https://www.supermicro.com/files_SYS/images/Motherboard/X12DPG-QT6.png\" width=\"500\"/>"
+       "<img src=\"https://www.supermicro.com/files_SYS/images/Motherboard/X12DPG-QT6.png\" width=\"400\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.Image object>"
@@ -57,7 +52,7 @@
    ],
    "source": [
     "# https://www.supermicro.com/zh_tw/products/motherboard/x12dpg-qt6\n",
-    "Image(url='https://www.supermicro.com/files_SYS/images/Motherboard/X12DPG-QT6.png', width=500)"
+    "Image(url='https://www.supermicro.com/files_SYS/images/Motherboard/X12DPG-QT6.png', width=400)"
    ]
   },
   {
@@ -75,10 +70,87 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a77f7ad6-aeec-4f76-b507-4ed4cb4b66c1",
+   "metadata": {},
+   "source": [
+    "### PCIe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a111b274-0065-459a-a4b8-9d90376ccbc8",
+   "metadata": {},
+   "source": [
+    "- `sudo dmidecode -t slot`\n",
+    "    - Designation: 插槽的物理标识（如 PCI-E Slot 1）。\n",
+    "    - Type: 插槽类型（如 PCI Express）。\n",
+    "    - Current Usage: 插槽当前的使用状态（Available 或 In Use）。\n",
+    "        - In Use：说明这个插槽已经插了设备。\n",
+    "        - Available：说明这个插槽是空的，可以用来安装新硬件。\n",
+    "    - Length: 插槽的物理长度（如 Long）。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "86ff54cd-1af4-404a-b2cc-f8c821933d92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"./imgs/cpu-pcie.jpeg\" width=\"400\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Image(url='./imgs/cpu-pcie.jpeg', width=400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99a89f36-2bbb-4827-a3fb-f2a355678e0b",
+   "metadata": {},
+   "source": [
+    "- 查看使用中的 PCIe 插槽外接的什么设备\n",
+    "    - 计算：`VGA compatible controller: NVIDIA Corporation Device 2684 (rev a1)`：4090\n",
+    "    - 存储\n",
+    "        - `RAID bus controller: Broadcom / LSI MegaRAID 12GSAS/PCIe Secure SAS39xx`\n",
+    "        - `Non-Volatile memory controller: Samsung Electronics Co Ltd NVMe SSD Controller PM9A1/PM9A3/980PRO`\n",
+    "    - 网络\n",
+    "\n",
+    "```shell\n",
+    "sudo apt install gawk\n",
+    "\n",
+    "sudo dmidecode -t slot | gawk -v RS= '\n",
+    "/Current Usage: In Use/ {\n",
+    "    if (match($0, /Designation: (.*)/, d) && match($0, /Bus Address: (.*)/, b)) {\n",
+    "        addr = b[1]\n",
+    "        if (addr != \"0000:ff:00.0\") {\n",
+    "            cmd = \"lspci -s \" addr\n",
+    "            cmd | getline device\n",
+    "            close(cmd)\n",
+    "            gsub(/^[0-9a-fA-F:.]+ /, \"\", device)\n",
+    "            printf \"插槽 (Slot) \\033[1;33m%s\\033[0m (地址: %s) -> \\033[1;32m%s\\033[0m\\n\", d[1], addr, device\n",
+    "        }\n",
+    "    }\n",
+    "}'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ff9dd538-a7a9-4ba3-a0bb-c42049b384b6",
    "metadata": {},
    "source": [
-    "## 内存条"
+    "### 内存条"
    ]
   },
   {
@@ -108,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
