--- a/ubuntu/ssh 端口转发与跳板机.ipynb
+++ b/ubuntu/ssh 端口转发与跳板机.ipynb
@@ -14,7 +14,7 @@
    "id": "014da1c1",
    "metadata": {},
    "source": [
-    "## basics"
+    "### basics"
    ]
   },
   {
@@ -32,10 +32,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83bc6303-4ef0-4790-b5c2-41d5b215aa69",
+   "metadata": {},
+   "source": [
+    "- 1007 update, 本地（A），跳板机（B），服务器（C）：A 能连到跳板机 B，B 能连到服务器C\n",
+    "    - `ssh -L 9999:C:1245 username@B`\n",
+    "    - 本机可以通过 9999 端口（`localhost:9999`）（经由B的跳转）访问服务器C的1245服务（比如服务器C上部署了jupyter的服务）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1ad04908",
    "metadata": {},
    "source": [
-    "### 免密登录"
+    "#### 免密登录"
    ]
   },
   {
@@ -56,7 +66,7 @@
    "id": "358acd67",
    "metadata": {},
    "source": [
-    "## ssh 客户端与服务器端"
+    "### ssh 客户端与服务器端"
    ]
   },
   {
@@ -232,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.5"
   },
   "toc": {
    "base_numbering": 1,
