--- a/ubuntu/运行时维护-运维.ipynb
+++ b/ubuntu/运行时维护-运维.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "630232ab-b6fa-4ef6-8fd1-1c33b51fd2ea",
+   "metadata": {},
+   "source": [
+    "- 时间（shell：time 命令）\n",
+    "    - real 时间 ≈ CPU时间 (user + sys) + 等待时间\n",
+    "        - real (真实时间 / 挂钟时间)\n",
+    "        - user (用户CPU时间)\n",
+    "        - sys (系统CPU时间)\n",
+    "    - 如果 real 远大于 (user + sys)：这说明你的程序大部分时间都花在了“等待”上，而不是在“计算”上。这种通常是 I/O密集型 任务，比如频繁地访问网络、读写硬盘等。\n",
+    "        - 比如 openai api 调用；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bfb4d901-ac79-4c16-b373-e6c4eca3643c",
    "metadata": {},
    "source": [
@@ -34,7 +48,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
