--- a/网络/科学上网.ipynb
+++ b/网络/科学上网.ipynb
@@ -8,6 +8,13 @@
     "ExecuteTime": {
      "end_time": "2024-02-18T11:19:20.355185Z",
      "start_time": "2024-02-18T11:19:20.347504Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-11-16T03:49:23.979145Z",
+     "iopub.status.busy": "2025-11-16T03:49:23.978598Z",
+     "iopub.status.idle": "2025-11-16T03:49:23.989887Z",
+     "shell.execute_reply": "2025-11-16T03:49:23.988643Z",
+     "shell.execute_reply.started": "2025-11-16T03:49:23.979120Z"
     }
    },
    "outputs": [],
@@ -43,7 +50,9 @@
     "\n",
     "os.environ['https_proxy'] = http://127.0.0.1:7890\n",
     "os.environ['http_proxy'] = http://127.0.0.1:7890\n",
-    "```"
+    "```\n",
+    "\n",
+    "- `env | egrep 'http_proxy|https_proxy|all_proxy|HTTP_PROXY|HTTPS_PROXY|ALL_PROXY' || echo \"no proxy env\"`"
    ]
   },
   {
@@ -84,6 +93,9 @@
     "        - ubuntu:\n",
     "            - xx.deb: `dpkg -i xx.deb`\n",
     "            - xx.tar.gz\n",
+    "- clash for linux （cli 模式）\n",
+    "    - https://github.com/wnlen/clash-for-linux\n",
+    "    - 改 `.env` 修改 clash 订阅地址即可；\n",
     "- Shadowrocket：俗称小火箭，ios app 上也可下载安装（2.99刀）\n",
     "- 机场\n",
     "    - 加速猫\n",
@@ -95,31 +107,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "01350169",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-18T11:19:42.351672Z",
      "start_time": "2024-02-18T11:19:42.345716Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2025-11-16T03:49:26.041748Z",
+     "iopub.status.busy": "2025-11-16T03:49:26.040377Z",
+     "iopub.status.idle": "2025-11-16T03:49:26.054546Z",
+     "shell.execute_reply": "2025-11-16T03:49:26.053519Z",
+     "shell.execute_reply.started": "2025-11-16T03:49:26.041698Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<img src=\"./imgs/network_proxy.png\" width=\"300\"/>"
+       "<img src=\"../imgs/network_proxy.png\" width=\"300\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(url='./imgs/network_proxy.png', width=300)"
+    "Image(url='../imgs/network_proxy.png', width=300)"
    ]
   },
   {
